<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shadow"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/product_128x128_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/product_128x128_thumbnail_decription"
        android:padding="1dp"
        android:src="@drawable/recepie" />

    <TextView
        android:id="@+id/product_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_title_label" />

    <TextView
        android:id="@+id/product_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price_label" />

</LinearLayout>
