<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:id="@+id/tab1" >"
    
    <LinearLayout
       android:id="@+id/top_view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#33CC66" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_pre" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_next" />

        </LinearLayout>
        
     
  </LinearLayout>
    
    <RelativeLayout  
          android:id="@+id/login_div"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content"  
          android:padding="15dip"  
          android:layout_margin="15dip"  
          > 
     
     <TextView  
          android:id="@+id/title_goal"  
          android:layout_width="wrap_content"  
          android:layout_height="wrap_content"  
          android:text="@string/title_tabFragment1" 
          android:layout_alignParentTop="true"  
          android:layout_centerInParent="true"
          android:layout_marginTop="10dp"  
          android:textSize="16sp"/>
      
      <Button  
           android:id="@+id/loseWeight_Button"  
           android:layout_width="match_parent"  
           android:layout_height="wrap_content"  
           android:layout_below="@id/title_goal" 
           android:layout_marginTop="10dp"  
           android:background="@drawable/user_details_record"
           android:text="@string/lose_weight"
           style="@style/normalText"
    	/>   
     	
      <Button  
           android:id="@+id/keepDiet_Button"  
           android:layout_width="match_parent"  
           android:layout_height="wrap_content"  
           android:layout_below="@id/loseWeight_Button" 
           android:background="@drawable/user_details_record"
           android:layout_marginTop="5dp" 
           android:text="@string/keep_diet"
           style="@style/normalText"
    	/>   
    	
      <Button  
           android:id="@+id/gainWeight_Button"  
           android:layout_width="match_parent"  
           android:layout_height="wrap_content"  
           android:layout_below="@id/keepDiet_Button" 
           android:layout_marginTop="5dp" 
           android:background="@drawable/user_details_record"
           android:text="@string/gain_weight"
           style="@style/normalText" 
    	/>   
        
     </RelativeLayout>

</LinearLayout>