<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout  
  xmlns:android="http://schemas.android.com/apk/res/android"  
  android:orientation="vertical"  
  android:layout_width="fill_parent"  
  android:layout_height="fill_parent" >  
  
  <LinearLayout
        android:id="@+id/top_view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#33CC66" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_pre" />
        </LinearLayout>
        
	    <TextView
            android:id="@+id/main_title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="Login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center" >  
        </LinearLayout>
	        
      </LinearLayout>
 
	  <RelativeLayout  
	          android:id="@+id/login_div"  
	          android:layout_width="fill_parent"  
	          android:layout_height="wrap_content"  
	          android:padding="15dip"  
	          android:layout_margin="15dip"  >  
	       
	          <TextView  
	                  android:id="@+id/login_user_input"  
	                  android:layout_width="wrap_content"  
	                  android:layout_height="wrap_content"  
	                  android:text="@string/login_label_username" 
	                  android:layout_alignParentTop="true"  
	                  android:layout_marginTop="5dp"  
	                  style="@style/normalText"/>  
	          <EditText  
	                  android:id="@+id/username"  
	                  android:layout_width="fill_parent"  
	                  android:layout_height="wrap_content"  
	                  android:hint="@string/login_username_hint"  
	                  android:layout_below="@id/login_user_input"  
	                  android:singleLine="true" 
	                  android:inputType="text"/>  
	 
	    <TextView  
	            android:id="@+id/login_password_input"  
	            android:layout_width="wrap_content"  
	            android:layout_height="wrap_content"  
	            android:layout_below="@id/username"  
	            android:layout_marginTop="3dp"  
	            android:text="@string/login_label_password"  
	            style="@style/normalText"/>  
	    <EditText  
	            android:id="@+id/password"  
	            android:layout_width="fill_parent"  
	            android:layout_height="wrap_content" 
	            android:layout_below="@id/login_password_input"   
	            android:password="true"  
	            android:singleLine="true" 
	            android:inputType="textPassword"   />  
	  
	    <Button  
	            android:id="@+id/loginbtn"  
	            android:layout_width="wrap_content"  
	            android:layout_height="wrap_content"  
	            android:layout_below="@id/password"  
	            android:layout_alignRight="@id/password"  
	            android:text="@string/login_button_txt"
	            android:background="#6699CC" 
	    />  
	  </RelativeLayout>  
	  
	   <RelativeLayout  
	      android:layout_width="fill_parent"  
	      android:layout_height="wrap_content"  
	      >  
	         <TextView  
	             android:id="@+id/register_link"  
	             android:text="@string/login_register_link"  
	             android:layout_width="wrap_content"  
	             android:layout_height="wrap_content"  
	             android:layout_marginLeft="15dp"  
	             android:textColor="#888"  
	             android:textColorLink="#FF0066CC"  
	          />  
	           
	    </RelativeLayout>  
  
</LinearLayout> 