<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
    <LinearLayout
       android:id="@+id/top_view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#33CC66" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_pre" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/main_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_next" />

        </LinearLayout>
        
     
  </LinearLayout>
  
    <RelativeLayout  
          android:id="@+id/top_div"  
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content"  
          android:padding="15dip"  
          android:layout_margin="5dip"  
          > 
          
        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
		    android:padding="5dip"    
            android:hint="@string/email_address"
            android:background="@drawable/frag_button"           
            android:textSize="14sp" 
            style="@style/normalText" />
   
    	<EditText
            android:id="@+id/passward_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:padding="5dip" 
            android:layout_below="@+id/email_address"
            android:hint="@string/password"
            android:background="@drawable/frag_button" 
            android:password="true"           
            android:textSize="14sp" 
            style="@style/normalText" />
    	
    	<EditText
            android:id="@+id/passward_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="5dip" 
            android:layout_below="@+id/passward_input"
            android:hint="@string/password_confirm"
            android:background="@drawable/frag_button" 
            android:password="true"           
            android:textSize="14sp" 
            style="@style/normalText" />
      
        <TextView
            android:id="@+id/command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passward_confirm_input"
            android:layout_marginTop="2dp"
            android:text="Password should be at least six letters"
            android:textSize="12sp" 
            style="@style/normalText" />
    
	    <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:padding="5dip" 
            android:layout_below="@+id/command"
            android:hint="@string/username_select"
            android:background="@drawable/frag_button"           
            android:textSize="14sp" 
            style="@style/normalText" />
	    
       
	</RelativeLayout>
</LinearLayout>